fix anchor alignment for mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -382,6 +382,6 @@ mini {
 	}
 	
 	main {
-		padding-top: 150px;
+		padding-top: 200px;
 	}
 }
